# haskell-programming

./: README.md  stack.yaml
ch1/: 02-chapter-exercises.txt  ex1.txt  ex2.txt
ch10/: Database.hs  Review.hs  Rewrites.hs  Scans.hs  TwitterWaterflow.hs  chex.txt  ex1.txt
ch11/: AsPatterns.hs  BinaryTree.hs  Hutton.hs  Jammin.hs  Misc.hs  Phone.hs  Vigenere.hs  allProgrammers.hs  chex.txt  ex1.txt  ex10.txt  ex2.hs  ex3.txt  ex4.txt  ex5.hs  ex6.hs  ex8.txt
ch12/: BinaryTree.hs  CountTheBeforeVowel.hs  CountVowels.hs  Either.hs  Maybe.hs  Natural.hs  ReplaceThe.hs  Unfolds.hs  ValidateTheWord.hs  chex.txt
ch13/: ex1.txt
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: LICENSE  README.md  hello.cabal
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/chex/: LICENSE  UsingQuickCheck.hs  WordNumber.hs  WordNumberTest.hs  chex.cabal  stack.yaml
ch14/morse/: morse.cabal
ch14/morse/app/: Main.hs
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch14/qc/: CoArbitrary.hs  Examples.hs  First.hs  README.md  qc.cabal
ch14/qc/src/: CoArbitrary.hs  Main.hs
ch15/: Madness.hs  Optional.hs
ch15/orphan-instance/: Listy.hs  ListyInstances.hs  README.md
ch16/: be-kind.txt  constant.hs  ex1.md  ex2.md  functors.hs  heavy-lifting.hs  io-functor.hs  more-structure.hs  natural-transformation.hs  possibly.hs  sum.hs
ch16/playground/: playground.cabal
ch16/playground/.stack-work/install/x86_64-linux/lts-5.17/7.10.3/lib/x86_64-linux-ghc-7.10.3/playground-0.1.0.0-C9tEiS98XIIIVMlMMC9TBa/: Lib.dyn_hi  Lib.hi
ch16/playground/.stack-work/install/x86_64-linux/lts-5.17/7.10.3/pkgdb/: package.cache  playground-0.1.0.0-7e2042915aaebe3c42a74c2d108fa632.conf
ch16/playground/src/: Lib.hs
ch16/qcFunctorInstances/: LICENSE  README.md  qcFunctorInstances.cabal
ch16/qcFunctorInstances/src/: Main.hs
ch17/: Constant.hs  Identity.hs  fixer-upper.hs  lookups.hs
ch2/: 01-comprehension-check.txt  02-parentheses-and-association.txt  03-heal-the-sick.txt  04-a-head-code.txt  05-chapter-exercises.txt  NOTES.md  ex1.txt  ex2.txt  ex3.txt  ex4.hs  ex4.txt  ex5.hs  ex6.txt  learn.hs  test.hs  triple.hs  waxOn.hs
ch3/: Global.hs  ex1.hs  ex1.txt  ex2.txt  ex3.hs  ex3.txt  print1.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  reverse.hs
ch4/: NOTES.md  ex1.txt  ex2.txt  ex3.txt  mood.hs  syntax.hs
ch5/: DetermineTheType.hs  arith3broken.hs  doesItCompile.hs  ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  sing.hs  typeInference1.hs  typeInference2.hs
ch6/: dayOfWeek.hs  ex1.hs  ex1.txt  ex2.txt  ex3.hs  ex3.txt  ex4.txt  identity.hs  numberish.hs  trivial.hs
ch7/: arith4.hs  ex1.txt  ex2.txt  ex3.hs  ex4.hs  ex5.hs  ex6.txt  foldBool.hs  tensDigit.hs
ch8/: WordNumber.hs  cattyConny.hs  dividedBy.hs  ex1.txt  ex2.txt  mc91.hs  myMult.hs  mySum.hs
ch9/: Cipher.hs  MyWords.hs  PoemLines.hs  char.hs  enumFromTo.hs  ex1-3.hs  ex1.txt  ex2.hs  ex3.hs  ex4.txt  ex5.txt  ex6.txt  ex7.txt  ex8.txt  myFilter.hs  myHead.hs  myPrelude.hs  myZip.hs  myZipWith.hs
misc/: LambdaCalculus.hs
