name:                addition
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     .
  exposed-modules:    Addition
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010
  build-depends:      base >=4.7 && <5
                    , hspec
                    , QuickCheck
