name:                chex
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dwayne/chex#readme
license:             BSD3
license-file:        LICENSE
author:              Dwayne Crooks
maintainer:          me@dwaynecrooks.com
copyright:           2016 Dwayne Crooks
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       .
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs
  exposed-modules:      WordNumberTest
  build-depends:        base >= 4.7 && < 5
                      , hspec
