name:                morse
version:             0.1.0.0
synopsis:            Morse code
description:         Please see README.md
homepage:            https://github.com/dwayne/morse
license:             BSD3
license-file:        LICENSE
author:              Dwayne Crooks
maintainer:          me@dwaynecrooks.com
copyright:           2016 Dwayne Crooks
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck

library
  hs-source-dirs:     src
  exposed-modules:    Morse
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , QuickCheck

test-suite tests
  hs-source-dirs:     tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , morse
                    , QuickCheck
