name:                playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dwayne/playground#readme
license:             BSD3
license-file:        LICENSE
author:              Dwayne Crooks
maintainer:          me@dwaynecrooks.com
copyright:           2016 Dwayne Crooks
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/dwayne/playground
